Fixes params bug caused by wrap_params, a small touch of css

--- a/app/assets/stylesheets/body.css
+++ b/app/assets/stylesheets/body.css
@@ -4,6 +4,8 @@ body h2 {
 
 body h5 {
   font-size: 24px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 input {
